<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="fragment_estate_details">Real Estate Details</string>

    <string name="error_happened">An error is happened</string>
    <string name="saved">Saved</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login</string>
    <string name="name">name</string>
    <string name="last_name">Last name</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="todo">Image</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="first_name">First name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="lastname">Last Name</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Real Estate Manager</string>
    <string name="nav_header_subtitle">enyo@realestate.ch</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="take_picture">Picture</string>
    <string name="type">Type :</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="country">Country</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="street">Street</string>
    <string name="city_label">City</string>
    <string name="label_state">Country</string>
    <string name="label_zip">Zip</string>
    <string name="label_save">Save</string>
    <string name="number_of_pieces">Number of pieces</string>
    <string name="description">Description</string>
    <string name="registration">NEW REAL ESTATE REGISTRATION</string>
    <string name="update">Save modification</string>

    <string name="loft">LOFT</string>
    <string name="manor">MANOR</string>
    <string name="duplex">DUPLEX</string>
    <string name="penthouse">PENTHOUSE</string>
    <string name="house">HOUSE</string>
    <string name="flat">FLAT</string>

    <string name="hospital">HOSPITAL</string>
    <string name="school">SCHOOL</string>
    <string name="shopping_center">SHOPPING CENTER</string>
    <string name="bus_station">BUS STATION</string>
    <string name="sport_center">SPORT CENTER</string>
    <string name="park">PARK</string>
    <string name="street_number">Street Nbr</string>

    <string name="error_string">Field must not be empty.</string>
    <string name="fragment_real_estate_ad">Add  New Real estate</string>
    <string name="fragment_real_estate_edit">Update Real estate</string>
    <string name="fragment_real_estate_search_fragment">Search a Real estate</string>
    <string name="fragment_real_estate_camera">Camera</string>
    <string name="camera">Camera</string>
    <string name="label_load">Load image</string>
    <string name="save">Save</string>
    <string name="gallery_permission"> This app need storage permission</string>
    <string name="title_activity_maps">Map</string>
    <string name="image_photo">Image photo</string>
    <string name="add_real_estate_remove_item_button">Remove Button</string>
    <string name="add_real_estate_image_added">Image added</string>
    <string name="real_estate_add_picture_button">Add a picture to the real</string>
    <string name="real_estate_add_save_button">Save the real now</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="line2">Line</string>
    <string name="image_description">Image Description</string>
    <string name="map_view">Map view</string>
    <string name="real_estate_image">Real\'s image</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathroom">Number of bathrooms</string>
    <string name="bathroom_quantity">Number of bathrooms</string>
    <string name="room_quantity"> Room quantity</string>
    <string name="bedroom_quantity">Quantity of bedrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="media">Media</string>
    <string name="enter_your_criteria">Enter your search criteria</string>
    <string name="area">Area</string>
    <string name="surface_min">Surface min</string>
    <string name="surface_max">Surface max</string>
    <string name="price_min">Price min</string>
    <string name="price_max">Price max</string>
    <string name="room_min">Room min</string>
    <string name="room_max">Room max</string>
    <string name="search_dialog_search">Search dialog search</string>
    <string name="search_dialog_cancel">Search dialog cancel</string>
    <string name="fragment_search_result">Search result </string>
    <string name="location_map">location map</string>
    <string name="bathroom_image">bathroom image</string>
    <string name="location_image_view">Location image view</string>
    <string name="bedroom_image">bedroom image</string>
    <string name="mortgage_simulator">Mortgage simulator</string>
    <string name="taxation">Calculation of the monthly payment</string>
    <string name="duration">Duration in month</string>
    <string name="calculation_result">calculation result</string>
    <string name="stop_calc">Cancel</string>
    <string name="calculate">Send  </string>
    <string name="Share">share</string>
    <string name="real_estate_update_status_button">Update Status</string>
    <string name="sold_label">Sold</string>
    <string name="unsold_label">Unsold</string>
    <string name="search_location">location</string>
    <string name="search_begin_period"> Begin period</string>
    <string name="search_end_period"> End period</string>

    <string name="cancel">Cancel</string>
    <string name="rate"> You have a rate of %1$d %3$s</string>
    <string name="rate_value"> "%,2.2f" %2$s</string>
    <string name="two_string"> %1$s %2$s </string>
    <string name="surface_size">"%,2.2f" m\u00B2 </string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="fragment_map_view">Real estates map view</string>
    <string name="fragment_taxation_dialog">Taxation</string>
    <string name="room_image_view">Room image view</string>
    <string name="add_real_estate">add Real Estate</string>
    <string name="logout">logout</string>
    <string name="convert_to_euro">Price in Euro</string>
    <string name="convert_to_dollar">Price in Dollar</string>


</resources>
