<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group android:id="@+id/primary">
        <item
            android:id="@+id/camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/action_estateListFragment_to_realEstateAddFragment"
            android:title="@string/action_add"
            android:icon="@drawable/ic_add"
            />
        <item
            android:id="@+id/action_estateListFragment_to_realEstateEditFragment"
            android:title="@string/action_edit"
            android:icon="@drawable/ic_edit"

            />
        <item
            android:id="@+id/share"
            android:title="@string/Share"
           android:icon="@drawable/baseline_share_white_48"
            />



    </group>

</menu>
