<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--          android:id="@+id/action_estateListFragment_to_realEstateSearchFragment"-->
      <item
          android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search"
          app:showAsAction="ifRoom"

          />
    <item
        android:id="@+id/action_estateListFragment_to_realEstateAddFragment"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"

       />
    <item
        android:id="@+id/action_estateListFragment_to_realEstateEditFragment"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom"

        />



    <!-- <item
         android:id="@+id/action_logout"
         android:title="@string/action_logout"

         >

     </item>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
          />-->


</menu>
